# fusion-generator-research

./: Cargo.toml
fusion-generator-core/: Cargo.toml
fusion-generator-core/src/: lib.rs  ts.rs
fusion-generator-jvm/: Cargo.toml
fusion-generator-jvm/src/: cli.rs  constant.rs  error.rs  main.rs  resolver.rs
fusion-generator-jvm/src/utils/: mod.rs  result_iter.rs
src/: lib.rs  ts.rs
src/ast/: common.rs  declaration.rs  endpoint.rs  mod.rs
